<resources>
    <string name="app_name">Widget</string>
    <string name="appwidget_text">PLM</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="start_text">Start Alarm</string>
    <string name="cancel_text">Cancel Alarm</string>
    <string name="doodle_alert">Doodle Alert</string>
    <string name="doodle_found">There is a Google doodle today!!</string>
    <string name="no_doodle">No Google doodle today.</string>
    <string name="connection_error">Connection error.</string>
    <string name="luni">L</string>
    <string name="marti">M</string>
    <string name="miercuri">Mi</string>
    <string name="joi">J</string>
    <string name="vineri">V</string>
</resources>
